trentStyle.css
body{ 
background-color: gray;
 }

.centered {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
   text-align: center;
   font-size: 35pt;
}

 #homepageHeadingImage{
    width: 100%;
}

#navbar{
   overflow: hidden;
   background-color: steelblue;
}

#navbar a{
   float: left;
   display: block;
   color: white;
   text-align: center;
   padding: 14px;
   text-decoration: none;
}

#navbar a.hover{
   background-color: slategray;
}

.content{
   padding: 0px;
}

.sticky{
   position: fixed;
   top: 0;
   width: 100%;
}

.sticky + .content{
   padding-top: 80px;
}

h1{ 
text-align: center;
 }

#tahoe{ 
display: block;
margin-left: auto;
margin-right: auto;
width: 100%;
 }

figcaption{ 
text-align: center;
 }

h2 { 
color: red;
/* Make the Master of Software Development a standount color */
}

